<resources>
    <string name="app_name">사고야!</string>
    <string name="year">1997</string>
    <string name="month">10</string>
    <string name="day">31</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">SIGN IN</string>
    <string name="signup">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="Already">Already a member? Sign In</string>
    <string name="createAccount">CREATE ACOUNT</string>
    <string name="title_sub">사고 유형을 선택해주세요</string>
    <string name="etc">기타</string>
    <string name="ask_accident">사고 정황을 알려주세요</string>
    <string name="content_car">인근에 교통사고가 발생하였습니다.</string>
    <string name="editor_title">직접 입력</string>
    <string name="editor_body">위치 등 상황을 알려주세요.</string>
    <string name="cancle_btn">취소</string>
    <string name="ok_BTN">주변 사람에게 알리기</string>
    <string name="bt_kdh_main">주변 사람에게 알리기</string>
    <string name="bt_kdh_range">범위 확인하기</string>
    <string name="default_notification_channel_id" />
    <string name="history">히스토리</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="logo">logo</string>
    <string name="email_form">1234@sagoya.com</string>
    <string name="password_form">6자~20자</string>
    <string name="history_marker">사고 발생 지역 확인하기</string>
    <string name="msg">터치하여 사고 발생 지역을 지정해주세요</string>
    <string name="password_repeat">Password reapeat</string>
    <string name="passwordrp_form">비밀번호를 한번 더 입력해주세요</string>
    <string name="bt_pgh_advice">advice</string>
</resources>