<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/login"
                android:maxWidth="250dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pgh_signUpemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="@color/point"
                android:ems="10"
                android:hint="@string/email_form"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pgh_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/point"
                android:ems="10"
                android:hint="@string/password_form"
                android:inputType="textPassword"
                android:textColor="#000000" />

            <Button
                android:id="@+id/bt_pgh_createAccountBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_style"
                android:fontFamily="@font/kobold"
                android:onClick="clickBTN"
                android:padding="10dp"
                android:shadowColor="#0D0D0D"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/point" />


            <TextView
                android:id="@+id/tv_pgh_LoginMoveTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kobold"
                android:gravity="center"
                android:onClick="clickTXT"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>

    <!--///////////////////////////////////////////////////////////////////////////////-->

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <fragment
            android:id="@+id/map_fragment"
            android:name="com.naver.maps.map.MapFragment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:addStatesFromChildren="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/img_knh_alarmbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/history"
                    android:focusable="true"
                    android:maxHeight="38dp"
                    android:onClick="Move"
                    app:srcCompat="@drawable/ic_alaram" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/bt_kdh_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/bt_kdh_range"
                    app:srcCompat="@drawable/ic_range" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/bt_pgh_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/bt_pgh_advice"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    app:srcCompat="@drawable/ic_locker_closed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/bt_pgh_advice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/bt_pgh_advice"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    app:srcCompat="@drawable/ic_advice" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_style2"
                android:text="@string/history_marker"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_kdh_inform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_style"
                android:text="@string/bt_kdh_main"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/point" />

        </LinearLayout>


    </RelativeLayout>
</FrameLayout>